Bug fixes & altering and improving saveClicked method